# unicode_regexes

./: README.md  pyproject.toml
unicode_regexes/: __init__.py
